Provide links to spring academy guides in response if present